libnova (0.14.0-0r0) unstable; urgency=low

  * New upstream release. (Closes: #604411)

  [ Matthew Rosewarne ]
  * Add watch file.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Bump Standards-Version to 3.9.1.
  * Add a final newline to the watch file.
  * Update installed files.

  [ José Manuel Santamaría Lema ]
  * Switch to source format 3.0 (quilt).
  * Bump debhelper compatibility level to 7.
  * Update installed files.
  * Update copyright file.
  * Add /usr/share/cdbs/1/rules/utils.mk to debian/rules to allow us to use
    debian/rules list-missing.
  * Don't install an uneeded *.la file. (Closes: #621545)

  [ Pino Toscano ]
  * Add Vcs-Browser and Vcs-Git headers in control.
  * Small description changes.
  * Bump Standards-Version to 3.9.2.

  [ Sune Vuorela ]
  * Change my email address to the @debian.org one.

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Thu, 07 Apr 2011 02:49:08 +0200

libnova (0.12.1-1) unstable; urgency=low

  * Initial release (Closes: #453099)

 -- Sune Vuorela <debian@pusling.com>  Tue, 27 Nov 2007 13:00:34 +0100
