@@ -2,7 +2,7 @@ Source: libnova
 Section: libs
 Priority: optional
 Maintainer: Debian Krap Maintainers <debian-qt-kde@lists.debian.org>
-Build-Depends: cdbs, debhelper (>= 7), autotools-dev
+Build-Depends: debhelper (>= 7.0.50~), autotools-dev
 Standards-Version: 3.9.2
 Uploaders: Sune Vuorela <sune@debian.org>
 Homepage: http://libnova.sourceforge.net/
