@@ -1,5 +1,11 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/utils.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
+%:
+	dh $@
+
+override_dh_auto_test:
+	dh_auto_test
+	-lntest/lntest
+
+override_dh_install:
+	dh_install --list-missing -X.la
