@@ -15,14 +15,17 @@ libnova (0.14.0-0r0) unstable; urgency=low
   * Bump debhelper compatibility level to 7.
   * Update installed files.
   * Update copyright file.
-  * Add /usr/share/cdbs/1/rules/utils.mk to debian/rules to allow us to use
-    debian/rules list-missing.
   * Don't install an uneeded *.la file. (Closes: #621545)
 
   [ Pino Toscano ]
   * Add Vcs-Browser and Vcs-Git headers in control.
   * Small description changes.
   * Bump Standards-Version to 3.9.2.
+  * Switch from cdbs to the dh sequencer:
+    - drop build dependency on cdbs
+    - bump debhelper build dependency to 7.0.50~
+    - run the lntest executable in a non-fatal way, as it fails and it is
+      not run as a test by the build system
 
   [ Sune Vuorela ]
   * Change my email address to the @debian.org one.
